@@ -25,6 +25,9 @@
 - Try not to pollute the terminal buffer with old progress bars in inverse
   video. Only the currently live one shall be seen. That one is pretty. The
   others are not.
+- Using plain dlopen()/LoadLibrary() for opening modules instead of libltdl.
+  This also means that --with-module-suffix is gone in configure.
+  TODO: ensure that .la files are not installed
 - libmpg123 version 43:
 -- Add flags MPG123_NO_PEEK_END and MPG123_FORCE_SEEKABLE, as suggested
    by Bent Bisballe Nyeng.
